[package]
name = "build_id"
version = "0.1.2"
license = "MIT OR Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["development-tools","rust-patterns"]
keywords = ["build","buildid","uuid"]
description = """
Obtain a UUID uniquely representing the build of the current binary.
"""
repository = "https://github.com/alecmocatta/build_id"
homepage = "https://github.com/alecmocatta/build_id"
documentation = "https://docs.rs/build_id/0.1.2"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/build_id", pipeline = "tests" }
maintenance = { status = "passively-maintained" }

[dependencies]
uuid = { version = "0.7", features = ["const_fn"] }
twox-hash = "1.1"
byteorder = "1.2"
palaver = "0.2"
