[package]
name = "build_id"
version = "0.2.0"
license = "MIT OR Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["development-tools","rust-patterns"]
keywords = ["build","buildid","uuid"]
description = """
Obtain a UUID uniquely representing the build of the current binary.
"""
repository = "https://github.com/alecmocatta/build_id"
homepage = "https://github.com/alecmocatta/build_id"
documentation = "https://docs.rs/build_id/0.2.0"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/build_id", pipeline = "tests" }
maintenance = { status = "passively-maintained" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
palaver = "0.2"

[dependencies]
byteorder = "1.2"
once_cell = "1.2"
twox-hash = { version = "1.1", default-features = false }
uuid = "0.8"
