[package]
name = "build_id"
version = "0.2.1"
license = "MIT OR Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["development-tools","rust-patterns"]
keywords = ["build","buildid","uuid"]
description = """
Obtain a UUID uniquely representing the build of the current binary.
"""
repository = "https://github.com/alecmocatta/build_id"
homepage = "https://github.com/alecmocatta/build_id"
documentation = "https://docs.rs/build_id/0.2.1"
readme = "README.md"
links = "build_id"
build = "build.rs"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/build_id", pipeline = "tests" }
maintenance = { status = "passively-maintained" }

[dependencies]
byteorder = "1.2"
once_cell = "1.2"
twox-hash = { version = "1.1", default-features = false }
uuid = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
palaver = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
